cabal-version:   3.4
name:            cardano-multisig
version:         0.1.0.0
synopsis:        Permissionless witness coordinator for Conway transactions
description:
  A permissionless, stateful backend service that coordinates the
  collection of witnesses over Conway transactions until they are fully
  signed and can be submitted.

homepage:        https://github.com/lambdasistemi/cardano-multisig
bug-reports:     https://github.com/lambdasistemi/cardano-multisig/issues
license:         Apache-2.0
license-file:    LICENSE
author:          Paolo Veronelli
maintainer:      paolo.veronelli@gmail.com
copyright:       2026 lambdasistemi
category:        Network
stability:       experimental
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

flag werror
  description: Enable -Werror (used by nix builds and CI)
  manual:      True
  default:     False

common warnings
  ghc-options:
    -Wall -Wunused-imports -Wunused-packages -Wmissing-export-lists
    -Wname-shadowing -Wdeferred-out-of-scope-variables
    -Wpartial-type-signatures -Wredundant-constraints

  if flag(werror)
    ghc-options: -Werror

common language
  default-language:   GHC2021
  default-extensions:
    DerivingStrategies
    LambdaCase
    OverloadedStrings
    RecordWildCards
    StrictData

library
  import:          warnings, language
  hs-source-dirs:  src
  exposed-modules:
    Cardano.Multisig.Chain
    Cardano.Multisig.FeeIndexer
    Cardano.Multisig.FeeTag
    Cardano.Multisig.Filter
    Cardano.Multisig.Liveness
    Cardano.Multisig.Publish
    Cardano.Multisig.Server
    Cardano.Multisig.Store
    Cardano.Multisig.Store.Codecs
    Cardano.Multisig.Store.Columns
    Cardano.Multisig.Store.RocksDB
    Cardano.Multisig.Version
    Cardano.Multisig.Witness

  other-modules:   Paths_cardano_multisig
  autogen-modules: Paths_cardano_multisig
  build-depends:
    , aeson                                    <2.3
    , async
    , base                                     <5
    , base16-bytestring
    , bech32
    , bytestring
    , cardano-crypto-class
    , cardano-ledger-allegra
    , cardano-ledger-api
    , cardano-ledger-binary
    , cardano-ledger-byron
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-ledger-read
    , cardano-ledger-shelley
    , cardano-node-clients
    , cardano-slotting
    , cardano-tx-tools
    , cardano-tx-tools:n2c-resolver
    , cborg
    , chain-follower
    , containers
    , contra-tracer
    , directory
    , http-types                               <0.13
    , lens
    , microlens
    , ouroboros-consensus
    , ouroboros-network:api
    , rocksdb-haskell-jprupp
    , rocksdb-kv-transactions
    , rocksdb-kv-transactions:kv-transactions
    , text
    , time
    , wai                                      <3.3
    , wai-cors                                 <0.3
    , warp                                     <3.5

executable cardano-multisig-server
  import:         warnings, language
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts
  build-depends:
    , base              <5
    , cardano-multisig

test-suite unit-tests
  import:         warnings, language
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:
    Cardano.Multisig.ChainSpec
    Cardano.Multisig.FeeIndexerSpec
    Cardano.Multisig.FeeTagSpec
    Cardano.Multisig.FilterSpec
    Cardano.Multisig.LivenessSpec
    Cardano.Multisig.PublishSpec
    Cardano.Multisig.ServerSpec
    Cardano.Multisig.StoreSpec
    Cardano.Multisig.WitnessSpec

  build-depends:
    , aeson                      <2.3
    , async
    , base                       <5
    , base16-bytestring
    , bech32
    , bytestring
    , cardano-crypto-class
    , cardano-ledger-allegra
    , cardano-ledger-api
    , cardano-ledger-binary
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-ledger-shelley
    , cardano-multisig
    , cardano-node-clients
    , cardano-slotting
    , cardano-tx-tools:tx-build
    , chain-follower
    , containers
    , hspec                      <2.12
    , http-types                 <0.13
    , microlens
    , mtl
    , ouroboros-consensus
    , ouroboros-network:api
    , QuickCheck
    , temporary
    , text
    , time
    , wai                        <3.3
    , wai-extra
